WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219862
Fix rare crashes in Page::lockAllOverlayScrollbarsToHidden()
https://bugs.webkit.org/show_bug.cgi?id=219862
Summary
Fix rare crashes in Page::lockAllOverlayScrollbarsToHidden()
Simon Fraser (smfr)
Reported
2020-12-14 10:46:20 PST
Fix rare crashes in Page::lockAllOverlayScrollbarsToHidden()
Attachments
Patch
(1.91 KB, patch)
2020-12-14 10:47 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-12-14 10:47:10 PST
Created
attachment 416170
[details]
Patch
EWS
Comment 2
2020-12-14 11:20:52 PST
Committed
r270789
: <
https://trac.webkit.org/changeset/270789
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416170
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-12-14 11:21:19 PST
<
rdar://problem/72306128
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug