Fix rare crashes in Page::lockAllOverlayScrollbarsToHidden() https://bugs.webkit.org/show_bug.cgi?id=219862 <rdar://problem/28205511>

Reviewed by Wenson Hsieh.

Crash data suggest that lockAllOverlayScrollbarsToHidden() can be called on a null
Page*, so check it.

* dom/Document.cpp:
(WebCore::Document::suspend):
(WebCore::Document::resume):


Canonical link: https://commits.webkit.org/232444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270789 268f45cc-cd09-0410-ab3c-d52691b4dbfc